@@ -1,0 +1,26 @@
+# This file contains architecture specific variables for
+# the 'armhf' architecture
+# It is sourced by the build scripts
+
+# Note that we keep "arm" as archspec (and thus also for conditions)
+# and also continue to use "arm" for arch-specific XML-files in order
+# to minimize impact on translations.
+
+archspec="arm;not-x86;not-s390;not-powerpc"
+arch_listname="arm"
+arch_porturl="arm"
+minimum_memory=36
+# These two options should be set if condition 'smp' is set below
+smp_config_section="N/A"
+smp_config_option="N/A"
+
+# Options below are assembled into one variable 'condition'
+# in the build scripts
+fdisk="fdisk.txt;cfdisk.txt"
+network="supports-tftp;supports-rarp;supports-bootp;supports-nfsroot"
+boot=""
+frontend="newt;not-gtk"
+other="supports-serial-console"
+smp=""
+goodies="supports-lang-chooser"
+status="not-checked"
