@@ -6,12 +6,14 @@
 i386	Intel x86
 amd64	AMD64
 armel	ARM
-hppa	PA-RISC (hppa)
+armhf	ARM
+#hppa	PA-RISC (hppa)
 ia64	IA-64
 mips	Mips
 mipsel	Mipsel
 powerpc	PowerPC
 s390	S/390
+s390x	S/390
 sparc	Sparc
 kfreebsd-i386	kFreeBSD Intel x86
 kfreebsd-amd64	kFreeBSD AMD64
