@@ -70,14 +70,23 @@ Description: Debian installation guide for armel
  .
  A shorter reference, the installation HOWTO, is included in an appendix.
 
-Package: installation-guide-hppa
+Package: installation-guide-armhf
 Architecture: all
 Conflicts: installation-guide
-Description: Debian installation guide for hppa
- This package contains the Debian installation guide for the PA-RISC
- architecture, in a variety of languages.
+Description: Debian installation guide for armhf
+ This package contains the Debian installation guide for the ARM
+ with Hardware FPU architecture, in a variety of languages.
  .
  A shorter reference, the installation HOWTO, is included in an appendix.
+
+#Package: installation-guide-hppa
+#Architecture: all
+#Conflicts: installation-guide
+#Description: Debian installation guide for hppa
+# This package contains the Debian installation guide for the PA-RISC
+# architecture, in a variety of languages.
+# .
+# A shorter reference, the installation HOWTO, is included in an appendix.
 
 Package: installation-guide-i386
 Architecture: all
@@ -147,6 +156,15 @@ Architecture: all
 Conflicts: installation-guide
 Description: Debian installation guide for s390
  This package contains the Debian installation guide for the S/390
+ architecture, in a variety of languages.
+ .
+ A shorter reference, the installation HOWTO, is included in an appendix.
+
+Package: installation-guide-s390x
+Architecture: all
+Conflicts: installation-guide
+Description: Debian installation guide for s390x
+ This package contains the Debian installation guide for the 64bit S/390
  architecture, in a variety of languages.
  .
  A shorter reference, the installation HOWTO, is included in an appendix.
