@@ -174,18 +174,16 @@ of the http URL: <userinput>file:/cdrom/debian/</userinput>
 Substitute one of the following for <replaceable>ARCH</replaceable>
 in the <command>debootstrap</command> command:
 
-<userinput>alpha</userinput>,
 <userinput>amd64</userinput>,
-<userinput>arm</userinput>,
 <userinput>armel</userinput>,
-<userinput>hppa</userinput>,
+<userinput>armhf</userinput>,
 <userinput>i386</userinput>,
 <userinput>ia64</userinput>,
-<userinput>m68k</userinput>,
 <userinput>mips</userinput>,
 <userinput>mipsel</userinput>,
 <userinput>powerpc</userinput>,
-<userinput>s390</userinput>, or
+<userinput>s390</userinput>,
+<userinput>s390x</userinput>, or
 <userinput>sparc</userinput>.
 
 <informalexample><screen>
