@@ -75,6 +75,13 @@ variations of each architecture known as <quote>flavors</quote>.
 </row>
 
 <row>
+  <entry>ARM with hardware FPU</entry>
+  <entry>armhf</entry>
+  <entry>Freescale</entry>
+  <entry>mx5</entry>
+</row>
+
+<row>
   <entry morerows="1">HP PA-RISC</entry>
   <entry morerows="1">hppa</entry>
   <entry>PA-RISC 1.1</entry>
@@ -142,6 +149,16 @@ variations of each architecture known as <quote>flavors</quote>.
 <row>
   <entry morerows="1">IBM S/390</entry>
   <entry morerows="1">s390</entry>
+  <entry>IPL from VM-reader and DASD</entry>
+  <entry>generic</entry>
+</row><row>
+  <entry>IPL from tape</entry>
+  <entry>tape</entry>
+</row>
+
+<row>
+  <entry morerows="1">64bit IBM S/390</entry>
+  <entry morerows="1">s390x</entry>
   <entry>IPL from VM-reader and DASD</entry>
   <entry>generic</entry>
 </row><row>
