@@ -33,6 +33,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
     default, and document how to enable it. Thanks Filipus Klutiero for the
     report. Closes: #666105.
   * Document that installing an MBR is needed to get a bootable USB key.
+  * Add armhf, s390x architectures, comment hppa architecture.
 
   [ Steve McIntyre ]
   * Make it clearer how we expect users to write CDs to USB sticks.
